--- a/NinjaAcademy/index.html
+++ b/NinjaAcademy/index.html
@@ -6,8 +6,29 @@
 </head>
 <body>
 
-<canvas></canvas>
-<script src="./index.js"></script>
+  <div id="container-div"
+       style="
+       position: relative;
+       width: 100%; height: 100%;"
+  >
+    <!-- health bars container div here -->
+    <div id="small-container-div" style="
+         position: absolute;
+         display: flex;
+         width: 100%;
+         align-items: center;"
+    >
+      <!-- player health -->
+      <div style="background-color: yellow; height: 30px; width: 100%;"></div>
+      <!-- timer -->
+      <div style="background-color: red; width: 100px; height: 100px; flex-shrink:0"></div>
+      <!-- enemy health -->
+      <div style="background-color: yellow; height: 30px; width: 100%;"></div>
+    </div>
+
+    <canvas></canvas>
+  </div>
+  <script src="./index.js"></script>
 
 </body>
 </html>
