milestone healthbars set

--- a/NinjaAcademy/index.html
+++ b/NinjaAcademy/index.html
@@ -27,9 +27,9 @@
          "
     >
       <!-- player health -->
-      <div style="position: relative; height: 30px; width: 100%; display: flex;">
-        <div style="background-color: yellow; height: 30px;"></div>
-        <div id="playerHealth" style="position: absolute; background: blue; top:0; right:0; bottom:0; left: 0"></div>
+      <div style="position: relative; height: 30px; width: 100%; display: flex; justify-content: flex-end;">
+        <div style="background-color: yellow; height: 30px; width: 100%;"></div>
+        <div id="playerHealth" style="position: absolute; background: blue; top:0; right:0; bottom:0; width: 100%;"></div>
       </div>
       <!-- timer -->
       <div style="background-color: red; width: 100px; height: 100px; flex-shrink:0"></div>
