--- a/NinjaAcademy/index.html
+++ b/NinjaAcademy/index.html
@@ -11,19 +11,22 @@
 </head>
 <body>
 
-  <div id="container-div"
+  <div
+       id="container-div"
        style="
-       position: relative;
-       display: inline-block;
+         position: relative;
+         display: inline-block;
        "
   >
     <!-- health bars container div here -->
-    <div id="small-container-div" style="
-         position: absolute;
-         display: flex;
-         width: 100%;
-         align-items: center;
-         padding: 20px;
+    <div
+         id="small-container-div"
+         style="
+           position: absolute;
+           display: flex;
+           width: 100%;
+           align-items: center;
+           padding: 20px;
          "
     >
       <!-- player health -->
@@ -32,7 +35,20 @@
         <div id="playerHealth" style="position: absolute; background: blue; top:0; right:0; bottom:0; width: 100%;"></div>
       </div>
       <!-- timer -->
-      <div style="background-color: red; width: 100px; height: 100px; flex-shrink:0"></div>
+      <div
+         id="timer"
+         style="
+           background-color: red;
+           width: 100px;
+           height: 100px;
+           flex-shrink:0;
+           display: flex;
+           align-items: center;
+           justify-content: center;
+         "
+      >
+        10
+      </div>
       <!-- enemy health -->
       <div style="position: relative; height: 30px; width: 100%;">
         <div style="background-color: yellow; height: 30px;"></div>
@@ -40,6 +56,21 @@
       </div>
     </div>
 
+    <div
+      id="displayResult"
+      style="
+        position: absolute;
+        color: white;
+        align-items: center;
+        justify-content: center;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: none;
+        "
+    >Tie
+    </div>
     <canvas width="1024" height="576"></canvas>
   </div>
   <script src="./index.js"></script>
