starting with sprites

--- a/NinjaAcademy/index.html
+++ b/NinjaAcademy/index.html
@@ -73,6 +73,7 @@
     </div>
     <canvas width="1024" height="576"></canvas>
   </div>
+  <script src="js/classes.js"></script>
   <script src="./index.js"></script>
 
 </body>
