milestone backgroundsprite completed

--- a/NinjaAcademy/index.html
+++ b/NinjaAcademy/index.html
@@ -73,6 +73,8 @@
     </div>
     <canvas width="1024" height="576"></canvas>
   </div>
+  <!-- Remember to make a thoughtful ordering of scripts -->
+  <script src="js/utils.js"></script>
   <script src="js/classes.js"></script>
   <script src="./index.js"></script>
 
