--- a/NinjaAcademy/index.html
+++ b/NinjaAcademy/index.html
@@ -30,17 +30,19 @@
          "
     >
       <!-- player health -->
-      <div style="position: relative; height: 30px; width: 100%; display: flex; justify-content: flex-end;">
-        <div style="background-color: yellow; height: 30px; width: 100%;"></div>
-        <div id="playerHealth" style="position: absolute; background: blue; top:0; right:0; bottom:0; width: 100%;"></div>
+      <div style="position: relative; height: 30px; width: 100%; display: flex; justify-content: flex-end; border-top: 4px solid white; border-left: 4px solid white; border-bottom: 4px solid white;">
+        <div style="background-color: red; width: 100%;"></div>
+        <div id="playerHealth" style="position: absolute; background: #818CF8; top:0; right:0; bottom:0; width: 100%;"></div>
       </div>
       <!-- timer -->
       <div
          id="timer"
          style="
-           background-color: red;
+           background-color: black;
+           color: white;
+           border: 4px solid white;
            width: 100px;
-           height: 100px;
+           height: 50px;
            flex-shrink:0;
            display: flex;
            align-items: center;
@@ -50,9 +52,9 @@
         10
       </div>
       <!-- enemy health -->
-      <div style="position: relative; height: 30px; width: 100%;">
-        <div style="background-color: yellow; height: 30px;"></div>
-        <div id="enemyHealth" style="position: absolute; background: blue; top:0; right:0; bottom:0; left: 0"></div>
+      <div style="position: relative; width: 100%; border-top: 4px solid white; border-right: 4px solid white; border-bottom: 4px solid white;">
+        <div style="background-color: red; height: 30px;"></div>
+        <div id="enemyHealth" style="position: absolute; background: #818CF8; top:0; right:0; bottom:0; left: 0"></div>
       </div>
     </div>
 
